--- a/SMS_MVCDTO.csproj
+++ b/SMS_MVCDTO.csproj
@@ -1,15 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+	<TargetFramework>net6.0</TargetFramework>
+	<Nullable>enable</Nullable>
+	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Enums\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="ViewModels\" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0-alpha.1" />
+	<Folder Include="DTOs\" />
+	<Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
