Fixed all services and implemetations

--- a/SMS_MVCDTO.csproj
+++ b/SMS_MVCDTO.csproj
@@ -41,7 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="ViewModels\NewFolder\" />
+	  <Folder Include="ViewModels\" />
 	</ItemGroup>
 
 </Project>
