added frontend for super admin list tables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "/all/SampleCreate.html"
+    "livePreview.defaultPreviewPath": "/all/SampleCreate.html",
+    "liveServer.settings.port": 5501
 }
