--- a/SMS_MVCDTO.csproj
+++ b/SMS_MVCDTO.csproj
@@ -7,28 +7,28 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Remove="all\Copy.cs.temp" />
-	  <None Remove="all\SampleAttendantsController.cs.temp" />
-	  <None Remove="all\SampleCreate.cshtml.temp" />
-	  <None Remove="all\SampleDelete.cshtml.temp" />
-	  <None Remove="all\SampleDetails.cshtml.temp" />
-	  <None Remove="all\SampleEdit.cshtml.temp" />
-	  <None Remove="all\SampleIndex.cshtml.temp" />
-	  <None Remove="Context\HideDivAttribute.cs.txt" />
+		<None Remove="all\Copy.cs.temp" />
+		<None Remove="all\SampleAttendantsController.cs.temp" />
+		<None Remove="all\SampleCreate.cshtml.temp" />
+		<None Remove="all\SampleDelete.cshtml.temp" />
+		<None Remove="all\SampleDetails.cshtml.temp" />
+		<None Remove="all\SampleEdit.cshtml.temp" />
+		<None Remove="all\SampleIndex.cshtml.temp" />
+		<None Remove="Context\HideDivAttribute.cs.txt" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Include="all\Copy.cs.temp" />
-	  <Compile Include="all\SampleAttendantsController.cs.temp" />
-	  <Compile Include="Context\HideDivAttribute.cs.txt" />
+		<Compile Include="all\Copy.cs.temp" />
+		<Compile Include="all\SampleAttendantsController.cs.temp" />
+		<Compile Include="Context\HideDivAttribute.cs.txt" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Include="all\SampleCreate.cshtml.temp" />
-	  <Content Include="all\SampleDelete.cshtml.temp" />
-	  <Content Include="all\SampleDetails.cshtml.temp" />
-	  <Content Include="all\SampleEdit.cshtml.temp" />
-	  <Content Include="all\SampleIndex.cshtml.temp" />
+		<Content Include="all\SampleCreate.cshtml.temp" />
+		<Content Include="all\SampleDelete.cshtml.temp" />
+		<Content Include="all\SampleDetails.cshtml.temp" />
+		<Content Include="all\SampleEdit.cshtml.temp" />
+		<Content Include="all\SampleIndex.cshtml.temp" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -39,6 +39,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
+		<PackageReference Include="MySql.Data" Version="8.0.32" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0-alpha.1" />
 	</ItemGroup>
 
