working on email

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;port=3306;Database=SMSMVCDTO20230207;Uid=root;Pwd=1234",
+    "DefaultConnection": "Server=localhost;port=3306;Database=SMSMVCDTO20230207;Uid=root;Pwd=1234"
+    //"EmailKey": "06;Database=SMSMVCDTO20230207"
+  },
+  "EmailConfiguration": {
+    "TokenKey": "EmailAPI"
     //"EmailKey": "06;Database=SMSMVCDTO20230207"
   }
+
 }
