--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -31,7 +31,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:25501",
+      "applicationUrl": "https://localhost:25501",
       "sslPort": 44337
     }
   }
